add_executable(auto_function auto_function.cc)
add_executable(function_argument function_arguments.cc)
add_executable(function_example function_example.cc)
add_executable(lambda_function lambda_func.cc)
add_executable(recusion_fibonaci recusion_fibonaci.cc)

add_executable(chapter0701 test/01.cc)
add_executable(chapter0702 test/02.cc)
add_executable(chapter0705 test/05.cc)