add_executable(array_pointer array_pointer.cc)
add_executable(assign_array assign_array.cc)
add_executable(assign_pointer assign_pointer.cc)
add_executable(const_reference const_reference.cc)
add_executable(null_pointer null_pointer.cc)
add_executable(pointer_exameple pointer.example.cc)

add_executable(chapter0801 test/01.cc)
add_executable(chapter0806 test/06.cc)