add_executable(find_element_string find_element_string.cpp)
add_executable(find_string_method find_string_method.cpp)
add_executable(instance_copy_string instance_copy_string.cpp)
add_executable(append_string append_string.cpp)

add_executable(chapter1601 test/01.cpp)
add_executable(chapter1602 test/02.cpp)
add_executable(chapter1603 test/03.cpp)
add_executable(chapter1604 test/04.cpp)
add_executable(chapter1605 test/05.cpp)
